// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File upload metadata snapshots tests renders default file upload metadata component 1`] = `
<form>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <FileUploadInfoRow
        file={
          Object {
            "name": "s12345678_test_file_archive.zip",
            "size": "application/pdf",
            "type": 5307669356,
          }
        }
      />
    </div>
  </div>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <Field
        component={[Function]}
        floatingLabelText="Enter a short description of file e.g. author manuscript"
        fullWidth={true}
        maxLength="255"
        name="fileDescription0"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </div>
  </div>
  <div
    className="columns"
  >
    <div
      className="column "
    >
      <Field
        component={[Function]}
        label="File is public (open access)"
        name="accessCondition0"
        thumbStyle={
          Object {
            "backgroundColor": "white",
          }
        }
        thumbSwitchedStyle={
          Object {
            "backgroundColor": "#2377CB",
          }
        }
        trackStyle={
          Object {
            "backgroundColor": "#595959",
          }
        }
        trackSwitchedStyle={
          Object {
            "backgroundColor": "#288BED",
          }
        }
      />
    </div>
    <div
      className="column"
    >
      <Field
        DateTimeFormat={[Function]}
        component={[Function]}
        disabled={true}
        floatingLabelText="Embargo date"
        fullWidth={true}
        locale="en-AU"
        minDate={2017-06-12T14:00:00.000Z}
        name="embargoDate0"
      />
    </div>
  </div>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <div
        className="disclaimer"
      >
        <span>
          DISCLAIMER
        </span>
        : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus faucibus, mauris vitae euismod iaculis, orci nulla tristique neque, eu mattis justo lorem in tellus. Pellentesque ultrices tempor felis, vitae sodales risus hendrerit vel. Cras vitae rutrum mauris. Suspendisse vitae est eleifend, imperdiet est sit amet, sagittis odio. Vivamus quis velit nibh. Fusce ullamcorper pulvinar viverra. Quisque mi nisl, pharetra id massa eget, euismod ullamcorper lectus. Quisque id ligula ullamcorper, efficitur lectus sed, tristique ipsum. Pellentesque quis ipsum ut turpis mattis sodales id ac metus.
      </div>
    </div>
  </div>
  <div
    className="buttonsContainer"
  >
    <FlatButton
      className="prevBtn"
      disabled={false}
      fullWidth={false}
      label="Cancel"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      onTouchTap={[Function]}
      primary={false}
      secondary={false}
    />
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Agree and continue"
      labelPosition="after"
      primary={false}
      secondary={true}
      type="submit"
    />
  </div>
</form>
`;

exports[`File upload metadata snapshots tests sets the previous button to decreaseStep function 1`] = `
<form>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <FileUploadInfoRow
        file={
          Object {
            "name": "s12345678_test_file_archive.zip",
            "size": "application/pdf",
            "type": 5307669356,
          }
        }
      />
    </div>
  </div>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <Field
        component={[Function]}
        floatingLabelText="Enter a short description of file e.g. author manuscript"
        fullWidth={true}
        maxLength="255"
        name="fileDescription1"
        type="text"
        validate={
          Array [
            [Function],
          ]
        }
      />
    </div>
  </div>
  <div
    className="columns"
  >
    <div
      className="column "
    >
      <Field
        component={[Function]}
        label="File is public (open access)"
        name="accessCondition1"
        thumbStyle={
          Object {
            "backgroundColor": "white",
          }
        }
        thumbSwitchedStyle={
          Object {
            "backgroundColor": "#2377CB",
          }
        }
        trackStyle={
          Object {
            "backgroundColor": "#595959",
          }
        }
        trackSwitchedStyle={
          Object {
            "backgroundColor": "#288BED",
          }
        }
      />
    </div>
    <div
      className="column"
    >
      <Field
        DateTimeFormat={[Function]}
        component={[Function]}
        disabled={true}
        floatingLabelText="Embargo date"
        fullWidth={true}
        locale="en-AU"
        minDate={2017-06-12T14:00:00.000Z}
        name="embargoDate1"
      />
    </div>
  </div>
  <div
    className="columns"
  >
    <div
      className="column"
    >
      <div
        className="disclaimer"
      >
        <span>
          DISCLAIMER
        </span>
        : Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus faucibus, mauris vitae euismod iaculis, orci nulla tristique neque, eu mattis justo lorem in tellus. Pellentesque ultrices tempor felis, vitae sodales risus hendrerit vel. Cras vitae rutrum mauris. Suspendisse vitae est eleifend, imperdiet est sit amet, sagittis odio. Vivamus quis velit nibh. Fusce ullamcorper pulvinar viverra. Quisque mi nisl, pharetra id massa eget, euismod ullamcorper lectus. Quisque id ligula ullamcorper, efficitur lectus sed, tristique ipsum. Pellentesque quis ipsum ut turpis mattis sodales id ac metus.
      </div>
    </div>
  </div>
  <div
    className="buttonsContainer"
  >
    <FlatButton
      className="prevBtn"
      disabled={false}
      fullWidth={false}
      label="Back"
      labelPosition="after"
      labelStyle={Object {}}
      onKeyboardFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onTouchStart={[Function]}
      primary={false}
      secondary={false}
    />
    <RaisedButton
      disabled={false}
      fullWidth={false}
      label="Agree and continue"
      labelPosition="after"
      primary={false}
      secondary={true}
      type="submit"
    />
  </div>
</form>
`;
